[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "memslicer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "memslicer"
path = "src/main.rs"

[dependencies]
libmsl = { path = "../libmsl", features = ["compress-all"] }
frida = "0.17"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ctrlc = "3"
base64 = "0.22"
